oxiplate-derive/tests/broken/extends/multiple-parents.stderr
error: Multiple parent blocks present in block
 --> tests/broken/extends/multiple-parents.rs:7:32
  |
7 | {% block content %}{% parent %}{% parent %}
  |                                ^^^^^^^^^^^^
